--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,9 @@ footer {
   justify-content: center;
   text-align: center;
 }
+#instagram-link{
+  color: cadetblue;
+}
 .greting{
   text-align: center;
 }
