--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,15 @@
 footer {
   position: relative;
   bottom: 0;
-  z-index: -1;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: aquamarine;
-  min-height: 200px;
+  min-height: 130px;
   justify-content: center;
   text-align: center;
+
 }
 #instagram-link{
   color: cadetblue;
@@ -22,6 +23,7 @@ img {
 
 h1 {
   background-color: cornflowerblue;
+  text-align: center;
 }
 
 .container {
@@ -148,15 +150,15 @@ a {
     position: absolute;
     display: flex;
     background-color: rgba(20, 20, 20, 0.95);
-    width: 100%;
-    height: 100%;
+    width: 40%;
+    height: 40%;
     top: 70px;
-    left: 0;
+    right: 0;
     flex-direction: column;
-    padding-top: 200px;
+    padding-top: 40px;
     align-items: center;
-    gap: 70px;
-    font-size: 40px;
+    gap: 40px;
+    font-size: 21px;
 
 
   }
